--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.3",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase": "^10.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
+    "react-paystack": "^6.0.0",
     "react-redux": "^9.0.4",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
@@ -49,5 +53,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.69.7"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
